--- a/m2/s1/g3/bio_honey/product_card/css/style.css
+++ b/m2/s1/g3/bio_honey/product_card/css/style.css
@@ -3,25 +3,34 @@
     padding:0;
     box-sizing: border-box;
 }
-
+.color-brown{
+    color:#612406;
+}
+#special{
+    font-weight: bold;
+}
+p{
+    font-size: 1.25rem;
+}
 .page-container{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.card-container{
+/*.card-container{
     width: 30vw;
-}
+}*/
 .card-container div.img{
     background: url(../img/honey.jpg) no-repeat center center/cover;
     height: 50vh;
-    border-radius: 25% 25% 0 0;
+    width: 25vw;
+    border-radius: 30% 30% 0 0;
 }
 .card-container div.caratteristiche{
     background: #ffd9b3;
-    height: 30vh;
-    border-radius: 0 0 25% 25%;
+    /*height: 30vh;*/
+    border-radius: 0 0 30% 30%;
     display: flex;
     flex-direction: column;
 }
@@ -29,8 +38,20 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding:3.5rem;
+    padding:2rem;
 }
+.tecniche p:nth-of-type(2) {
+    font-size:1rem;
+    text-align: center;
+ }
 .card-container div.caratteristiche div.bottone{
     text-align: center;
+}
+.card-container div.caratteristiche div.bottone button{
+    background: #F3DF85;
+    padding: 1rem;
+    width: 200px;
+    border: 0;
+    border-radius: 50px;
+    margin-bottom:1rem;
 }
